[HOPS-431] apply HDFS-5312